--- a/app/src/main/res/layout-v21/fragment_settings.xml
+++ b/app/src/main/res/layout-v21/fragment_settings.xml
@@ -28,7 +28,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/hôte"
+            android:id="@+id/hote"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="hote"
